# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
name = "lit_deno_bindings"
version = "0.1.0"
authors = ["the Lit authors"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LIT-Protocol/deno"
description = "Lit Protocol Bindings for Deno"

[lib]
path = "lib.rs"

[dependencies]
deno_core = { version = "0.151.0", path = "../../core" }
serde = { version = "1.0.136", features = ["derive"] }
serde_repr = "0.1.7"

[dev-dependencies]
deno_bench_util = { version = "0.63.0", path = "../../bench_util" }
deno_webidl = { version = "0.69.0", path = "../webidl" }

# [[bench]]
# name = "url_ops"
# harness = false
